Update and rename online_webshop.ipynb to online_webshop_demo.ipynb

--- a/online_webshop_demo.ipynb
+++ b/online_webshop_demo.ipynb
@@ -34,7 +34,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv ('/content/spanish-export-utf8.csv', delimiter=\";\")\n"
+        "df = pd.read_csv ('/content/export-utf8.csv', delimiter=\";\")\n"
       ],
       "metadata": {
         "id": "7aOwaezARcdf"
